--- a/Assets/CSS/home.css
+++ b/Assets/CSS/home.css
@@ -297,7 +297,7 @@ hr {
     }
     #menuIcon {
        padding: 0 10px 2.5px 10px;
-        color: rgba(0,0,0,.8);
+        color: white;
         border-radius: 2px;
         border: 1px solid rgba(0,0,0,.2);
         margin-top: 35%;
