--- a/Assets/CSS/home.css
+++ b/Assets/CSS/home.css
@@ -8,6 +8,10 @@ body {
 }
 #hamburger{
     display: none;
+    
+}
+#menuIcon {
+    color: #ce2127
 }
 nav {
     width: 100%;
@@ -347,7 +351,7 @@ border-top:  1.5px solid #ce2127;
     }
     #menuIcon {
        padding: 0 10px 2.5px 10px;
-        color: black;
+        
         border-radius: 2px;
         border: 1px solid rgba(0,0,0,.2);
         margin-top: 35%;
@@ -432,7 +436,7 @@ border-top:  1.5px solid #ce2127;
     }
     #menuIcon {
        padding: 0 10px 2.5px 10px;
-        color: black;
+        
         border-radius: 2px;
         border: 1px solid rgba(0,0,0,.2);
         margin-top: 35%;
