--- a/Assets/CSS/about.css
+++ b/Assets/CSS/about.css
@@ -158,7 +158,7 @@ margin-bottom: 0;
         text-align: center;
         border: 1px solid #ce2127;
         margin: 0 15% 0 15%;
-        padding: 10px;
+        padding: 5px 10px 5px 10px;
     }
     h3 {
         color: #ce2127
