--- a/Assets/CSS/about.css
+++ b/Assets/CSS/about.css
@@ -157,16 +157,16 @@ margin-bottom: 0;
         color: white;
         text-align: center;
         border: 1px solid #ce2127;
-        margin: 0 15% 0 15%;
-        padding: 5px 10px 5px 10px;
+        margin: 2% 10% 0 10%;
+        padding: 10px;
     }
     h3 {
         color: #ce2127
     }
     /* Map */
     .map {
-        margin: 0 25% 0 25%;
-        width: 50vw;
+         margin: 2% 17% 2% 17%;
+        
         
     }
 /* Footer CSS */
