--- a/Assets/CSS/about.css
+++ b/Assets/CSS/about.css
@@ -165,7 +165,7 @@ margin-bottom: 0;
     }
     /* Map */
     .map {
-         margin: 2% 0 2% 0;
+         margin: 2% 10% 2% 0;
         
         
     }
