--- a/Assets/CSS/about.css
+++ b/Assets/CSS/about.css
@@ -168,7 +168,7 @@ margin-bottom: 0;
    
    .map {
        display: block;
-       margin: auto;
+       margin: 2% auto;
        
    }
 /* Footer CSS */
@@ -180,6 +180,7 @@ footer {
     text-align: center !important;
     height: 150px;
     border-top: 1px solid #ce2127;
+    
 
 }
 
@@ -238,4 +239,48 @@ hr {
 .fa-facebook-square {
     color: #4267b2;
 
+}
+@media only screen and (min-width: 650px){
+    .info {
+        float: left;
+        border: none;
+        margin-left: 3rem;
+        margin-right: 0;
+        margin-top: 1.5rem;
+        text-align: center;
+        width: 40%;
+        padding: 0;
+    }
+    .map {
+        display: block;
+        width: 45%;
+        float: right;
+        margin: 0;
+        margin-right: 0.5rem;
+        margin-bottom: 20px;
+        margin-top: 10px;
+    }
+    
+}
+@media only screen and (min-width: 847px){
+    #hamburger{
+        display: none;
+    }
+    #menuIcon {
+        display: none;
+    }
+    #navlist {
+        display: block;
+    }
+    li.links{ 
+        display: inline-block;
+    }
+}
+@media only screen and  (min-width: 900px){
+    .map {
+        height: 375px;
+    }
+    .info{
+        margin-top: 4rem;
+    }
 }
