--- a/Assets/CSS/about.css
+++ b/Assets/CSS/about.css
@@ -184,25 +184,25 @@ footer {
 
 }
 
-h6 a {
+footer h4 a {
     color: #f9bd69;
     text-decoration: none;
 
 }
 
-h6 {
+footer h4 {
     font-family: 'Libre Baskerville', serif;
     display: inline-block;
     font-weight: lighter;
     word-spacing: 20px;
     text-transform: uppercase;
     font-size: 1rem;
-    word-spacing: 5rem;
+    word-spacing: 2rem;
     margin-bottom: 0;
 
 }
 
-h5 {
+footer h5 {
     font-family: 'Libre Baskerville', serif;
     display: inline-block;
     font-weight: lighter;
@@ -213,7 +213,7 @@ h5 {
 
 }
 
-h6 a:hover {
+footer h4 a:hover {
     color: white;
 
 }
@@ -225,7 +225,6 @@ hr {
     border-color: rgba(0, 0, 0, 0.1);
 
 }
-
 /* Footer Social Icons Css */
 
 .fa-instagram {
