--- a/Assets/CSS/contact.css
+++ b/Assets/CSS/contact.css
@@ -197,7 +197,7 @@ input {
     border:  1px solid #ce2127;
     width: 60vw;
     height: 30vh;
-    padding: 15px;
+    padding: 20px 15px 15px 15px;
     margin: 3rem auto;
     border-radius: 4px;
     
