--- a/Assets/CSS/contact.css
+++ b/Assets/CSS/contact.css
@@ -118,6 +118,8 @@ li.links {
 
 }
 
+/* Form CSS */
+
 form {
     background-color: #845d3c;
     margin: 2.5% auto;
@@ -145,29 +147,24 @@ form p {
 }
 input::placeholder{
     font-size: 0.6rem;
+    color: white;
+    padding-left: 2.5px;
 }
 input, textarea {
     display: block;
     border: 1px solid #ce2127;
     background-color: #f9bd69;
-    margin: 0.25rem 0;
     border-radius: 3.5px;
 }
-::placeholder {
-    color: white;
-    padding-left: 2.5px;
-    
-}
+
 textarea {
     font-size: 0.7rem;
     width: 99%;
     height: 8rem;
     margin: 0.5rem 0;
-    padding: 0;
+    padding: 5px 0 0 2.5px;
     resize: none;
     color: white;
-    padding-left: 2.5px;
-    padding-top: 5px;
     
 }
 #submit {
@@ -178,7 +175,6 @@ textarea {
     margin: 1rem auto;
     text-transform: uppercase;
     border-radius: 5px;
-    
     font-weight: bold;
    
 }
@@ -190,13 +186,16 @@ textarea {
 input {
     width: 50%;
     height: 1.5rem;
+    margin: 0.25rem 0;
 }
+
+/* Alternate contact methods css */
 .contact {
     text-align: center;
     color: #ce2127;
     border:  1px solid #ce2127;
     width: 60vw;
-    height: 28.5vh;
+    height: 200px;
     padding: 15px;
     margin: 3rem auto;
     border-radius: 4px;
@@ -204,12 +203,12 @@ input {
 }
 
 .fas {
-    font-size: 50px;
+    font-size: 3rem;
     color: #ce2127;
     
 }
 .email {
-    font-size: 0.7rem;
+    font-size: 1.8vh;
     
 }
 div h4 {
@@ -220,15 +219,6 @@ div p {
     font-weight: lighter;
 }
 
-
-
-
-
-
-
-
-
-
 /* Footer CSS */
 
 footer {
@@ -238,7 +228,7 @@ footer {
     text-align: center !important;
     height: 150px;
     border-top: 1px solid #ce2127;
-    
+    text-transform: uppercase;
 
 }
 
@@ -250,10 +240,8 @@ footer h4 a {
 
 footer h4 {
     font-family: 'Libre Baskerville', serif;
-    display: inline-block;
     font-weight: lighter;
     word-spacing: 20px;
-    text-transform: uppercase;
     font-size: 1rem;
     word-spacing: 2rem;
     margin-bottom: 0;
@@ -261,10 +249,7 @@ footer h4 {
 }
 
 footer h5 {
-    font-family: 'Libre Baskerville', serif;
-    display: inline-block;
     font-weight: lighter;
-    text-transform: uppercase;
     margin-bottom: 0;
     color: #f9bd69;
     margin-top: 15px;
@@ -277,12 +262,11 @@ footer h4 a:hover {
 }
 
 hr {
-    margin-top: 1.5%;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin: 1.5% 15% ;
     border-color: rgba(0, 0, 0, 0.1);
 
 }
+
 
 /* Footer Social Icons Css */
 
@@ -298,77 +282,47 @@ hr {
     color: #4267b2;
 
 }
-@media only screen and (min-width: 500px) and (max-width: 599px){
+
+@media only screen and (min-width: 500px){
     form {
-        background-color: #845d3c;
-        margin: 2.5% auto;
-        height: fit-content;
         width: 65vw;
-        border: 2px solid #ce2127;
-        border-radius: 5px;
-        color: wheat;
-        font-size: 0.7rem;
-        padding: 5px;
         
     }
     .contact {
         width: 50vw;
     }
     .email{
-        font-size: 0.8rem;
+        font-size: 2vh;
     }
 }
-@media only screen and (min-width: 600px) and (max-width:724px){
+@media only screen and (min-width: 600px){
     form {
-        background-color: #845d3c;
-        margin: 2.5% auto;
-        height: fit-content;
         width: 65vw;
-        border: 2px solid #ce2127;
-        border-radius: 5px;
-        color: wheat;
-        font-size: 0.7rem;
-        padding: 5px;
         
     }
     .contact {
         width: 45vw;
     }
 }
-@media only screen and (min-width: 725px) and (max-width: 846px){
+@media only screen and (min-width: 725px){
     form {
-        background-color: #845d3c;
-        margin: 2.5% auto;
-        height: fit-content;
         width: 60vw;
-        border: 2px solid #ce2127;
-        border-radius: 5px;
-        color: wheat;
-        font-size: 0.7rem;
-        padding: 5px;
+        
         
     }
     .contact {
         width: 40vw;
     }
 }
-@media only screen and (min-width: 847px) and (max-width:1099px){
+@media only screen and (min-width: 847px){
     form {
-        background-color: #845d3c;
-        margin: 2.5% auto;
-        height: fit-content;
         width: 60vw;
-        border: 2px solid #ce2127;
-        border-radius: 5px;
-        color: wheat;
-        font-size: 0.7rem;
-        padding: 5px;
         
     }
     .contact {
         width: 30vw;
         margin: 0 0.5vw 5vh 1.5vw;
-        padding: 10px 0 10px 0;
+        padding: 10px 0;
        float: left;
     }
     #hamburger{
@@ -391,6 +345,6 @@ hr {
     .contact {
         width: 25vw;
         margin: 0 2.5vw 5vh 4.5vw;
-        height: 30vh;
+
     }
 }
