--- a/Assets/CSS/menu.css
+++ b/Assets/CSS/menu.css
@@ -6,13 +6,14 @@ body {
     font-family: 'Libre Baskerville', serif;
     font-weight: 400;
     overflow-x: hidden;
+
 }
 
 a {
     text-decoration: none;
     color: #ce2127;
-}
 
+}
 
 /* Nav CSS */
 nav {
@@ -20,15 +21,19 @@ nav {
     margin: 0 auto;
     height: 55px;
     z-index: 1000;
+
 }
+
 #icon {
     position: absolute;
     margin-left: 10px;
     
 }
+
 .cursive {
     font-family: 'Trochut', cursive;
 }
+
 #logo {
     font-size: 1.25rem;
     font-weight: bold;
@@ -36,16 +41,19 @@ nav {
     padding: 1px 0 0 70px;
     color: #ce2127;
     text-decoration: none;
+
 }
+
 .links {
-    
     list-style: none;
     display: inline-block;
     padding: 15px 10px;
     
 }
+
 ul a li:hover {
     color: white;
+
 }
 
 ul {
@@ -54,14 +62,15 @@ ul {
     width: 80%;
     margin: 0 0 0 155px;
     padding: 10px 0 0 0;
+
 }
 
 /* Sticky Nav CSS */
-
 #hamburger {
     display: block;
     float: right;
     margin-right: 20px;
+
 }
 
 .sticky nav {
@@ -70,6 +79,7 @@ ul {
     z-index: 1;
     background-color: #f9bd69;
     transition: 1000ms;
+
 }
 
 #menuIcon {
@@ -80,6 +90,7 @@ ul {
     border: 1px solid rgba(0, 0, 0, .2);
     margin-top: 35%;
     margin-bottom: 25%;
+
 }
 
 #navlist.togglemenu {
@@ -90,7 +101,7 @@ ul {
     font-size: 1rem;
     font-style: italic;
     width: 50vw;
-    height: 100vh;
+    height: 90vh;
     margin: 55px 0 0 50%;
     padding: 25% 0 30px 0;
     border-left: 1.5px solid #ce2127;
@@ -116,7 +127,6 @@ li.links {
 }
 
 /* Footer CSS */
-
 footer {
     width: 100%;
     background-color: #845d3c;
@@ -125,7 +135,6 @@ footer {
     height: 150px;
     border-top: 1px solid #ce2127;
     
-
 }
 
 h4 a {
@@ -157,9 +166,10 @@ h5 {
 
 }
 
-h4 a:hover {
+footer h4 a:hover {
     color: white;
-
+    font-size: 0.8rem;
+    cursor: pointer;
 }
 
 hr {
@@ -171,7 +181,6 @@ hr {
 }
 
 /* Footer Social Icons Css */
-
 .fa-instagram {
     color: #fff;
     border-radius: 5px;
@@ -184,38 +193,48 @@ hr {
     color: #4267b2;
 
 }
+/* Nav Tabs */
 .tabcontainer {
     margin-left: 0;
     margin-right: 0;
     height: fit-content;
     
 }
+
 button a {
     color: wheat;
     
 }
+
 #nav-tab {
     display: inline-block;
     text-align: center;
+
 }
+
 ul#nav-tab {
     display: inline-flex;
     margin: 0 auto;
     width: 100vw;
+
 }
+
 button {
     padding: 0;
-    
     font-size: 1rem;
     background-color: #845d3c;
     border: none;
     width: 100%;
     height: 6vh;
     border-radius: 0.5px;
+
 } 
+
 button.active a {
     color: white;
+
 }
+
 button.active {
     background-color: #ce2127;
     
@@ -223,50 +242,73 @@ button.active {
 button:hover {
     background-color: #ce2127;
     color: white;
+    border: 1px solid #ce2127;
+
 }
 
+/* To-GO Button */
 #callbtn {
     width: 50vw;
     background-color: #ce2127;
     color: wheat;
-    margin: 2vh 23.5vw;
+    margin: 2vh 24vw;
     border-radius: 20px;
 
 }
+
+#callbtn:hover{
+    background-color: #f9bd69;
+    color: #ce2127;
+    cursor: pointer;
+}
+
+/* Menu Cards */
 .card {
-    width: 60vw;
-    height: fit-content;
+    width: 55vw;
+    height: 45vh;
     margin: 0 auto;
     margin-bottom: 1rem;
     background-color: #845d3c;
     text-align: center;
-    /* padding: 5px; */
     border-radius: 4px;
     border: 2px solid #ce2127;
     color: wheat;
+
 }
+
 .card p {
-    font-size: 0.85rem;
+    font-size: 1.75vh;
     padding: 0 10px;
     margin-top: 5px;
     
 }
+
 .card img{
-    width: 59vw;
+    width: 54vw;
     height: 25vh;
     margin: 0;
     padding-top: 2px;
+
 }
+
 .foodtitle {
     color: #f9bd69;
     margin: 0;
     margin-top: 4px;
-    
-    
+    font-size: 4vw;
+      
 }
 
+#combos .foodtitle {
+    font-size: 2.5vw;
 
-  
+}
+
+#combos .card p {
+    font-size: 1.6vh;
+
+}
+
   .tab-pane { 
     display: none;
     
@@ -274,155 +316,207 @@ button:hover {
   
   .tab-pane.active { 
     display: block; 
+
   }
 
-
-
-
-
-
-
-
-
-
-
+/* Logo */
 #chile {
     display: none;
     max-width: 30vw;
     position: absolute;
     z-index: -1;
     margin: 0vh 35vw 0 35vw;
+
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
   @media only screen and (min-width: 600px){
       
       .card {
           width: 40vw;
           float: left;
-          height: 55vh;
+          height:  55vh;
           margin: 0 0 0 5.5vw;
           margin-bottom: 1rem;
           background-color: #845d3c;
           text-align: center;
-          /* padding: 5px; */
           border-radius: 4px;
           border: 2px solid #ce2127;
           color: wheat;
+
       }
       .card p {
-          font-size: 0.8rem;
+          font-size: 2vh;
+
       }
+
+      .foodtitle {
+          font-size: 3vw;
+
+      }
+
+      #combos .foodtitle {
+        font-size: 2.4vw;
+
+    }
+    #combos .card p {
+        font-size: 1.6vh;
+
+    }
       
       .card img{
           width: 40vw;
-          height: 25vh;
+          height:  30vh;
           margin: 0;
           padding-top: 0;
+
       }
+
       #callbtn{
           width: 40vw;
           margin: 2vh 30vw;
+
       }  
 }
   @media only screen and (min-width: 750px){
     .card {
         width: 30vw;
         float: left;
-        
         margin: 0 1vw 0 1vw;
         margin-bottom: 1rem;
         background-color: #845d3c;
         text-align: center;
-        /* padding: 5px; */
         border-radius: 4px;
         border: 2px solid #ce2127;
         color: wheat;
+
     }
     
     .card img{
         width: 30vw;
-        height: 25vh;
         margin: 0;
         padding-top: 0;
+
     }
+
+    .card p {
+        font-size: 1.65vh;
+
+    }
+
     #callbtn{
-       
         width: 30vw;
         margin: 2vh 34vw;
-    }  
+
+    } 
+
+    .foodtitle {
+        font-size: 2.5vw;
+
+    } 
+
+    #combos .foodtitle {
+        font-size: 1.7vw;
+
+    }
+
+    #combos .card p {
+        font-size: 1.65vh;
+
+    }
+
   }
 
 @media only screen and (min-width: 847px){
     #hamburger{
         display: none;
+
     }
+
     #menuIcon {
         display: none;
+
     }
+
     #navlist {
         display: block;
+
     }
+
     li.links{ 
         display: inline-block;
+
     }
+
     #callbtn {
         display: none;
+
     }
+
     .card{
         margin-top: 2vh;
+
     }
+
     ul#nav-tab {
         margin: 0 25vw 0 25vw;
         width: 50vw;
         margin-top: 25vh;
+
     }
+
     #chile {
         display: block;
+
     }
+
 }
 @media only screen and (min-width: 950px) {
     .card {
         width: 22vw;
         float: left;
-        
+        height:  50vh;
         margin: 2vh 0.5vw 0 1.6vw;
         margin-bottom: 1rem;
         background-color: #845d3c;
         text-align: center;
-        /* padding: 5px; */
         border-radius: 4px;
         border: 2px solid #ce2127;
         color: wheat;
+
     }
     
     .card img{
         width: 22vw;
-        height: 25vh;
         margin: 0;
         padding-top: 0;
+
     }
+
     #callbtn{
         display: none;
-    }  
+
+    } 
+
     .card p {
-        font-size: 0.75rem;
+        font-size: 1.55vh;
+
     }
-   
+
+    .foodtitle {
+        font-size: 1.5vw;
+
+    }
+
+    #combos .foodtitle {
+        font-size: 1.2vw;
+
+    }
+
+    #combos .card p {
+        font-size: 1.4vh;
+
+    }
+
 }
 @media only screen and (min-width: 1015px){
     #chile{
@@ -430,10 +524,7 @@ button:hover {
     position: absolute;
     z-index: -1;
     margin: 0vh 38vw 0 38vw;
+
     }
-}
-@media only screen and (min-width: 1200px){
-.card p {
-    font-size: 0.9rem;
-}
+
 }
