--- a/Assets/CSS/about.css
+++ b/Assets/CSS/about.css
@@ -141,6 +141,11 @@ margin-bottom: 0;
     border: 1px solid #ce2127;
     margin-bottom: 20px;
 }
+.btn:hover{
+    color: #ce2127;
+    background-color: #f9bd69;
+    cursor: pointer;
+}
 /* Our Mission CSS */
 .full {
     width: 100vw;
@@ -215,7 +220,8 @@ footer h5 {
 
 footer h4 a:hover {
     color: white;
-
+    font-size: 0.8rem;
+    cursor: pointer;
 }
 
 hr {
@@ -243,21 +249,14 @@ hr {
     .info {
         float: left;
         border: none;
-        margin-left: 3rem;
-        margin-right: 0;
-        margin-top: 1.5rem;
-        text-align: center;
+        margin: 1.5rem 0 0 3rem;
         width: 40%;
         padding: 0;
     }
     .map {
-        display: block;
         width: 45%;
         float: right;
-        margin: 0;
-        margin-right: 0.5rem;
-        margin-bottom: 20px;
-        margin-top: 10px;
+        margin:10px 0.5rem 20px 0;
     }
     
 }
